--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>pocjavalin</name>
 	<description>Testando mini framework</description>
+	<properties>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>io.javalin</groupId>
@@ -37,7 +41,8 @@
 					<transformers>
 						<transformer
 							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-							<mainClass>app.Main</mainClass> <!-- Here you should put the main class of your application -->
+							<mainClass>pocjavalin.Main</mainClass> <!-- Here you should put the main class of your
+							application -->
 						</transformer>
 					</transformers>
 					<filters>
